# Pytest-automation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Makefile  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  SETUP_EXECUTION.md  STRUCTURE.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.ps1  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: test.yml
config/: __init__.py  config.py
features/: conftest.py  login.feature
pages/: __init__.py  base_page.py  login_page.py
steps/: login_steps.py
tests/: conftest.py
tests/ui/: conftest.py  test_login.py
utils/: __init__.py
